# ioq3

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
cmake/: basegame.cmake  client.cmake  gnu.cmake  identity.cmake  libraries.cmake  macos.cmake  missionpack.cmake  msvc.cmake  names.cmake  renderer_common.cmake  renderer_gl1.cmake  renderer_gl2.cmake  server.cmake  shared_sources.cmake  sources.cmake  tools.cmake  unix.cmake  windows.cmake
cmake/compilers/: all.cmake  gnu.cmake  msvc.cmake
cmake/libraries/: all.cmake  curl.cmake  freetype.cmake  jpeg.cmake  ogg.cmake  openal.cmake  opus.cmake  sdl.cmake  vorbis.cmake  zlib.cmake
cmake/tools/: CMakeLists.txt
cmake/utils/: add_git_dependency.cmake  disable_warnings.cmake  find_include_dirs.cmake  qvm_tools.cmake  set_output_dirs.cmake  stringify_shader.cmake
code/client/: cl_avi.c  cl_console.c  cl_main.c  keycodes.h
code/qcommon/: common.c  files.c  q_platform.h  q_shared.h  qcommon.h
code/renderercommon/: qgl.h
code/renderergl1/: tr_init.c
code/renderergl2/: tr_extensions.c
code/sdl/: sdl_gamma.c  sdl_glimp.c  sdl_input.c  sdl_snd.c
code/server/: sv_ccmds.c
code/sys/: sys_loadlib.h  sys_local.h  sys_main.c  sys_unix.c  sys_win32.c
misc/: build-macos-sdl.sh  ci-macos-import-codesign-cert.sh  lib-versions.sh  update-libs.sh
misc/macos/: build-macos-sdl.sh
